--- a/ex6/src/main/resources/templates/movie/register.html
+++ b/ex6/src/main/resources/templates/movie/register.html
@@ -25,85 +25,100 @@
     </form>
     <div class="uploadResult"><!--file의 onchange 후에 보여질 섬네일 보여주는 영역-->
       <ul></ul>
-      <script th:inline="javascript">
-        function checkExtension(fileName, fileSize){
-          maxSize = 1024*1024*10;
-          if(fileSize >= maxSize) {alert("파일사이즈 초과");return false; }
-          // https://developer.mozilla.org/ko/docs/Web/JavaScript/Guide/Regular_expressions
-          //const regex = new RegExp("(.*?)\.(exe|sh|zip|alz|tiff)$");
-          const regex = new RegExp("(.*?)\.(jpg|jpeg|png|gif|bmp|pdf)$",'i');//i대소문자구분X
-          if(!regex.test(fileName)) {alert("해당파일 업로드 금지!");return false; }
-          return true
-        }
-        const fileInput = document.querySelector("#fileInput")
-        fileInput.onchange = function() {
-          let formData = new FormData();
-          const fileName = fileInput.value.split("\\").pop();
-          let label = document.querySelector("#custom-label")
-          label.innerHTML =
-            (fileInput.files.length-1) == 0 ? "" :
-                  `${fileName} 외 ${fileInput.files.length-1}개`
-          let appended = false; // 파일이 잘 추가되는지 확인
-          for(let i=0;i<fileInput.files.length;i++) {
-            if(!checkExtension(fileInput.files[i].name, fileInput.files.size)) {
-              label.innerHTML = ''; fileInput.value = '';
-              appended = false;break;
-            }
-            formData.append("uploadFiles", fileInput.files[i])
-            appended = true;
-          }
-          if(!appended) return;
-          for(const value of formData.values()) console.log(value)
-          const url = /*[[@{/uploadAjax}]]*/'url'
-          fetch(url, {
-            method: 'POST', body: formData, dataType: 'json'
-          })
-          .then(res => res.json())
-          .then(json => {console.log(json);showResult(json);})
-          .catch(err => console.log('Error: ', err))
-        }
-        function showResult(arr) {
-          const uploadUL = document.querySelector(".uploadResult ul");
-          let str = ""
-          const url = /*[[@{/display}]]*/'url'
-          for(let i=0;i<arr.length;i++){
-            str += `<li data-name='${arr[i].fileName}' data-path='${arr[i].folderPath}'
-            data-uuid='${arr[i].uuid}' data-file='${arr[i].imageURL}'><div>
-            <button class="removeBtn" type="button">X</button>
-            <img src="${url}?fileName=${arr[i].thumbnailURL}">
-            </div></li>`
-          }
-          uploadUL.innerHTML = str;
-          const removeBtns = document.querySelectorAll(".removeBtn");
-          for(let i=0;i<removeBtns.length;i++){
-            removeBtns[i].onclick = function() {
-              const removeUrl = /*[[@{/removeFile?fileName=}]]*/'removeUrl'
-              const targetLi = this.closest('li')
-              const fileName = targetLi.dataset.name;
-              fetch(removeUrl+fileName, {
-                method: 'POST', dataType: 'json'
-              })
-              .then(response => response.json())
-              .then(json => {
-                if(json === true) targetLi.remove()
-              })
-              .catch(err => console.log("Error occurred: ", err))
-            }
-          }
-        }
-
-        btnSend = document.querySelector("#btnSend");
-        btnSend.onclick = function(e) {
-          e.preventDefault();
-          title = document.getElementById("title")
-          writerEmail = document.querySelector("#writerEmail")
-          if(title.value == "") {title.focus();return false;}
-          if(writerEmail.value == "") {writerEmail.focus();return false;}
-          document.querySelector("#frmSend").submit();
-        }
-
-      </script>
     </div>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script th:inline="javascript">
+      function checkExtension(fileName, fileSize){
+        maxSize = 1024*1024*10;
+        if(fileSize >= maxSize) {alert("파일사이즈 초과");return false; }
+        // https://developer.mozilla.org/ko/docs/Web/JavaScript/Guide/Regular_expressions
+        //const regex = new RegExp("(.*?)\.(exe|sh|zip|alz|tiff)$");
+        const regex = new RegExp("(.*?)\.(jpg|jpeg|png|gif|bmp|pdf)$",'i');//i대소문자구분X
+        if(!regex.test(fileName)) {alert("해당파일 업로드 금지!");return false; }
+        return true
+      }
+      const fileInput = document.querySelector("#fileInput")
+      fileInput.onchange = function() {
+        let formData = new FormData();
+        const fileName = fileInput.value.split("\\").pop();
+        let label = document.querySelector("#custom-label")
+        label.innerHTML =
+          (fileInput.files.length-1) == 0 ? "" :
+                `${fileName} 외 ${fileInput.files.length-1}개`
+        let appended = false; // 파일이 잘 추가되는지 확인
+        for(let i=0;i<fileInput.files.length;i++) {
+          if(!checkExtension(fileInput.files[i].name, fileInput.files.size)) {
+            label.innerHTML = ''; fileInput.value = '';
+            appended = false;break;
+          }
+          formData.append("uploadFiles", fileInput.files[i])
+          appended = true;
+        }
+        if(!appended) return;
+        for(const value of formData.values()) console.log(value)
+        const url = /*[[@{/uploadAjax}]]*/'url'
+        fetch(url, {
+          method: 'POST', body: formData, dataType: 'json'
+        })
+        .then(res => res.json())
+        .then(json => {console.log(json);showResult(json);})
+        .catch(err => console.log('Error: ', err))
+      }
+      function showResult(arr) {
+        const uploadUL = document.querySelector(".uploadResult ul");
+        let str = ""
+        const url = /*[[@{/display}]]*/'url'
+        for(let i=0;i<arr.length;i++){
+          str += `<li data-name='${arr[i].fileName}' data-path='${arr[i].folderPath}'
+          data-uuid='${arr[i].uuid}' data-file='${arr[i].imageURL}'><div>
+          <button class="removeBtn" type="button">X</button>
+          <img src="${url}?fileName=${arr[i].thumbnailURL}">
+          </div></li>`
+        }
+        uploadUL.innerHTML = str;
+        const removeBtns = document.querySelectorAll(".removeBtn");
+        for(let i=0;i<removeBtns.length;i++){
+          removeBtns[i].onclick = function() {
+            const removeUrl = /*[[@{/removeFile?fileName=}]]*/'removeUrl'
+            const targetLi = this.closest('li')
+            const fileName = targetLi.dataset.file;
+            /*fetch(removeUrl+fileName, {
+              method: 'POST', dataType: 'json', fileName: fileName
+            })
+            .then(response => response.json())
+            .then(json => {
+              console.log(json)
+              if(json === true) targetLi.remove()
+              document.querySelector("#custom-label").innerHTML = ''
+              document.querySelector("#fileInput").value = '';
+            })
+            .catch(err => console.log("Error occurred: ", err))
+            */
+            axios({
+              method: "POST",
+              url: removeUrl+fileName,
+            }).then(res => {
+              if(res.data === true) targetLi.remove();
+              document.querySelector("#custom-label").innerHTML = '';
+              document.querySelector("#fileInput").value = '';
+            }).catch(err => {
+              console.log(err);
+            });
+          }
+        }
+      }
+
+      btnSend = document.querySelector("#btnSend");
+      btnSend.onclick = function(e) {
+        e.preventDefault();
+        title = document.getElementById("title")
+        writerEmail = document.querySelector("#writerEmail")
+        if(title.value == "") {title.focus();return false;}
+        if(writerEmail.value == "") {writerEmail.focus();return false;}
+        document.querySelector("#frmSend").submit();
+      }
+
+    </script>
   </th:block>
 
 </th:block>
