--- a/ex6/src/main/resources/templates/movie/read.html
+++ b/ex6/src/main/resources/templates/movie/read.html
@@ -124,15 +124,16 @@
               data-grade="${data[i].grade}" data-nickname="${data[i].nickname}"
               data-email="${data[i].email}" data-reviewnum="${data[i].reviewnum}"
               style="padding: 5px 20px;cursor:pointer;">
-                <div style="display:inline-block;width:49%;">
+                <div style="display:inline-block;width:68%;">
                   <h6 style="display:inline-block;width:70px">${data[i].reviewnum}</h6>
-                  <h5 class="card-text" style="display:inline-block;">${data[i].text}</h5>
+                  <h5 class="card-text" style="display:inline-block;">${data[i].text}
+                  [★ ${data[i].grade}]</h5>
                 </div>
-                <div style="display:inline-block;width:48%;text-align: right;right-padding:20px;">
-                  <span class="card-subtitle text-muted">${data[i].nickname} /
+                <div style="display:inline-block;width:30%;text-align: right;right-padding:12px;">
+                  <span class="card-subtitle text-muted" style="font-size:10px">${data[i].nickname} /
                    ${data[i].email}</span>
                   <span class="card-subtitle text-muted"
-                  style="display:inline-block;width:150px;color:rgb(148 163 184);"
+                  style="display:inline-block;width:150px;color:rgb(148 163 184);font-size:12px;"
                   >${formatDateTime(data[i].regDate)}</span>
                 </div>
               </div>`
@@ -203,6 +204,7 @@
                   })
                   .catch(err => console.log('myError', err))
                 }
+                document.querySelector('.star span').style.width =`${grade *20}%`;
                 myModal.show()
               }
             }
@@ -222,7 +224,7 @@
           document.querySelector(".modal-body").innerHTML =
             `
             <input type="text" class="form-control" id="modalMid" name="mid" placeholder="Member ID(mid)">
-            <label>Grade</label><span class="star">★★★★★<span>★★★★★</span>
+            <label id="notice">Grade</label> <span class="star">★★★★★<span>★★★★★</span>
                    <input type="range" oninput="drawStar(this)" value="1" step="2" min="0" max="10">
                    </span><br>
             <input type="text" class="form-control" name="text" placeholder="Review Text...">
@@ -235,11 +237,14 @@
           document.querySelector(".modal-footer .save").onclick = function () {
             let text = document.querySelector("input[name='text']")
             let mid = document.querySelector("#modalMid")
-            let grade = parseFloat(document.querySelector(".star span").style.width)*0.15*5
+            let grade = parseFloat(document.querySelector(".star span").style.width)*0.01*5
+            let notice = document.querySelector('#notice')
 
-            if(!text.value) {text.setAttribute('placeholder', '댓글입력하세요');return;}
-            if(!mid.value) {mid.setAttribute('placeholder', 'MID를 입력하세요');return;}
-            if(!grade) {alert('별점'); return;}
+            if(!text.value) {
+              text.setAttribute('placeholder','댓글입력하세요');text.focus();return;}
+            if(!mid.value) {
+              mid.setAttribute('placeholder','회원번호를 입력하세요');mid.focus();return;}
+            if(!grade) {notice.textContent='Select Grade!'; return;}
             let review = {mno: mno, text: text.value, mid: mid.value, grade: grade}
             const url = /*[[@{/reviews/}]]*/'url';
             fetch(url+mno, {
@@ -259,9 +264,7 @@
           }
           myModal.show()
         }
-
         var msg = [[${msg}]]
-
         // 일회성 msg의 내용이 비거나 history 상태가 비지 않는 경우 return
         if(msg === '' || history.state) return
         // history 이용해서 모달창 보여준거에 대한 기록을 clear!
@@ -273,7 +276,6 @@
           myModal.show()
         }
       }
-
     </script>
   </th:block>
 
