--- a/ex6/src/main/resources/templates/movie/read.html
+++ b/ex6/src/main/resources/templates/movie/read.html
@@ -98,6 +98,7 @@
       </div>
     </div>
     <script th:inline="javascript">
+      // 별점 처리
       function drawStar(target) {
         document.querySelector('.star span').style.width = `${target.value * 10}%`;
       }
@@ -108,6 +109,8 @@
         loadReviewJSON();
         var myModal = new bootstrap.Modal(document.querySelector('#myModal'),
                           { backdrop: true });
+
+        // Ajax로 리뷰 불러오기
         function loadReviewJSON() {
           const url = /*[[@{/reviews/}]]*/'url'
           const listGroup = document.querySelector(".reviewList")
@@ -141,6 +144,7 @@
             listGroup.innerHTML = str
             const cardBody = document.querySelectorAll(".card-body")
             for(let i=0;i<cardBody.length;i++) {
+              // 리뷰 상세보기
               cardBody[i].onclick = function() {
                 let reviewnum = cardBody[i].dataset.reviewnum;
                 let text = cardBody[i].dataset.text;
@@ -151,7 +155,7 @@
                 document.querySelector(".modal-body").innerHTML =
                   `<input type="hidden" name="reviewnum" value="${reviewnum}" readonly>
                    <input type="hidden" name="mid" value="${mid}" readonly>
-                   <label>Grade</label><span class="star">★★★★★<span>★★★★★</span>
+                   <label id="notice">Grade</label><span class="star">★★★★★<span>★★★★★</span>
                    <input type="range" oninput="drawStar(this)" value="1" step="2" min="0" max="10">
                    </span><br>
                    <input type="text" class="form-control" name="text" value="${text}">
@@ -162,15 +166,17 @@
                    <span class="btn btn-secondary" data-bs-dismiss="modal">Close</span>
                   `
                 document.querySelector(".modal-footer .modify").onclick = function () {
-                  let reviewnum = document.querySelector("input[name='reviewnum']")
-                  let text = document.querySelector("input[name='text']")
+                  let text = document.querySelector(".modal-body input[name='text']")
+                  let mid = document.querySelector("#modalMid")
                   let grade = parseFloat(document.querySelector(".star span").style.width)*0.01*5;
+                  let notice = document.querySelector('#notice')
 
-                  if(!text.value) {text.setAttribute('placeholder', '리뷰를 입력하세요');return;}
-                  if(!reviewer.value) {reviewer.setAttribute('placeholder', '작성자입력하세요');return;}
-                  let review = {rno: rno.value,mno: mno,text: text.value,reviewer: reviewer.value}
+                  if(!text.value) {
+                    text.setAttribute('placeholder','댓글입력하세요');text.focus();return;}
+                  if(!grade) {notice.textContent='Select Grade!'; return;}
+                  let review = {mno: mno, text: text.value, mid: mid.value, grade: grade}
                   const url = /*[[@{/reviews/}]]*/'url';
-                  fetch(url, {
+                  fetch(url+mno+"/"+reviewnum, {
                     method: 'PUT',
                     headers: {'Content-type': 'application/json'},
                     body: JSON.stringify(review)
@@ -211,15 +217,20 @@
             }
           });
         }
+
+        // 날짜 형식 맞춤 함수
         function formatDateTime(str) {
           const date = new Date(str)
           return `${date.getFullYear()}/${len2(date.getMonth()+1)}`
              + `/${len2(date.getDate())} ${len2(date.getHours())}:`
              + `${len2(date.getMinutes())}`
         }
+        // 2자리 숫자 채움 함수
         function len2(num) {
           return (num<10) ? "0"+num : num;
         }
+
+        // 리뷰 추가하기
         document.querySelector('.addReview').onclick = function() {
           document.querySelector('#exampleModalLabel').textContent = '리뷰 추가'
           document.querySelector(".modal-body").innerHTML =
@@ -235,8 +246,9 @@
               <button type="button" class="btn btn-primary save">댓글 등록</button>
               <span class="btn btn-secondary" data-bs-dismiss="modal">Close</span>
             `
+          // 모달창에서 댓글 추가하기 버튼 처리
           document.querySelector(".modal-footer .save").onclick = function () {
-            let text = document.querySelector("input[name='text']")
+            let text = document.querySelector(".modal-body input[name='text']")
             let mid = document.querySelector("#modalMid")
             let grade = parseFloat(document.querySelector(".star span").style.width)*0.01*5;
             let notice = document.querySelector('#notice')
