--- a/ex6/src/main/resources/templates/movie/read.html
+++ b/ex6/src/main/resources/templates/movie/read.html
@@ -166,17 +166,18 @@
                    <span class="btn btn-secondary" data-bs-dismiss="modal">Close</span>
                   `
                 document.querySelector(".modal-footer .modify").onclick = function () {
+                  let reviewnum = document.querySelector(".modal-body input[name='reviewnum']")
                   let text = document.querySelector(".modal-body input[name='text']")
-                  let mid = document.querySelector("#modalMid")
+                  let mid = document.querySelector(".modal-body input[name='mid']")
                   let grade = parseFloat(document.querySelector(".star span").style.width)*0.01*5;
                   let notice = document.querySelector('#notice')
 
                   if(!text.value) {
                     text.setAttribute('placeholder','댓글입력하세요');text.focus();return;}
                   if(!grade) {notice.textContent='Select Grade!'; return;}
-                  let review = {mno: mno, text: text.value, mid: mid.value, grade: grade}
+                  let review = {mno: mno, text: text.value, mid: mid.value, grade: grade, reviewnum: reviewnum.value}
                   const url = /*[[@{/reviews/}]]*/'url';
-                  fetch(url+mno+"/"+reviewnum, {
+                  fetch(url+mno+"/"+reviewnum.value, {
                     method: 'PUT',
                     headers: {'Content-type': 'application/json'},
                     body: JSON.stringify(review)
@@ -235,7 +236,7 @@
           document.querySelector('#exampleModalLabel').textContent = '리뷰 추가'
           document.querySelector(".modal-body").innerHTML =
             `
-            <input type="text" class="form-control" id="modalMid" name="mid" placeholder="Member ID(mid)">
+            <input type="text" class="form-control" name="mid" placeholder="Member ID(mid)">
             <label id="notice">Grade</label> <span class="star">★★★★★<span>★★★★★</span>
                    <input type="range" oninput="drawStar(this)" value="1" step="2" min="0" max="10">
                    </span><br>
@@ -249,7 +250,7 @@
           // 모달창에서 댓글 추가하기 버튼 처리
           document.querySelector(".modal-footer .save").onclick = function () {
             let text = document.querySelector(".modal-body input[name='text']")
-            let mid = document.querySelector("#modalMid")
+            let mid = document.querySelector(".modal-body input[name='text']")
             let grade = parseFloat(document.querySelector(".star span").style.width)*0.01*5;
             let notice = document.querySelector('#notice')
 
