--- a/ex6/src/main/resources/templates/movie/modify.html
+++ b/ex6/src/main/resources/templates/movie/modify.html
@@ -65,7 +65,9 @@
             th:data-name='${movieImageDTO.imgName}'
             style="cursor:pointer;">
           <div>
-            <button class="removeBtn" type="button">X</button>
+            <button type="button"
+                    th:onclick="deleteFileDb(this)"
+            >X</button>
             <img
                 th:if="${movieImageDTO.path != null}"
                 th:src="|@{/display(fileName=${movieImageDTO.getThumbnailURL})}|">
@@ -110,6 +112,24 @@
         .then(json => {console.log(json);showResult(json);})
         .catch(err => console.log('Error: ', err))
       }
+      function deleteFileDb(btn){
+
+        const removeUrl = /*[[@{/removeFile?fileName=}]]*/'removeUrl'
+        const targetLi = btn.closest('li')
+        const fileName = targetLi.dataset.file;
+        const uuid =targetLi.dataset.uuid;
+        fetch(removeUrl+fileName+"&uuid="+uuid, {
+          method: 'POST', dataType: 'json', fileName: fileName
+        })
+        .then(response => response.json())
+        .then(json => {
+          console.log(json)
+          if(json === true) targetLi.remove()
+          document.querySelector("#custom-label").innerHTML = ''
+          document.querySelector("#fileInput").value = '';
+        })
+        .catch(err => console.log("Error occurred: ", err))
+      }
       function showResult(arr) {
         const uploadUL = document.querySelector(".uploadResult ul");
         let str = ""
@@ -128,7 +148,7 @@
             const removeUrl = /*[[@{/removeFile?fileName=}]]*/'removeUrl'
             const targetLi = this.closest('li')
             const fileName = targetLi.dataset.file;
-            /*fetch(removeUrl+fileName, {
+            fetch(removeUrl+fileName, {
               method: 'POST', dataType: 'json', fileName: fileName
             })
             .then(response => response.json())
@@ -139,7 +159,9 @@
               document.querySelector("#fileInput").value = '';
             })
             .catch(err => console.log("Error occurred: ", err))
-            */
+
+
+            /*
             axios({
               method: "POST",
               url: removeUrl+fileName,
@@ -150,6 +172,7 @@
             }).catch(err => {
               console.log(err);
             });
+            */
           }
         }
       }
