--- a/ex6/src/main/resources/templates/movie/modify.html
+++ b/ex6/src/main/resources/templates/movie/modify.html
@@ -140,7 +140,7 @@
           <img src="${url}?fileName=${arr[i].thumbnailURL}">
           </div></li>`
         }
-        uploadUL.innerHTML = str;
+        uploadUL.innerHTML += str;
         const removeBtns = document.querySelectorAll(".removeBtn");
         for(let i=0;i<removeBtns.length;i++){
           removeBtns[i].onclick = function() {
@@ -185,7 +185,7 @@
             "파일을 선택하세요!"
           fileInput.focus(); return false;
         }*/
-        frmSend.submit();
+        //frmSend.submit();
       }
       btnDele.onclick = e => {
         e.preventDefault()
