--- a/ex7/src/main/resources/templates/index.html
+++ b/ex7/src/main/resources/templates/index.html
@@ -5,7 +5,9 @@
   <title>Title</title>
 </head>
 <body>
-  <h1>ex7 Security</h1>
-
+<h1>ex7 Security</h1>
+<a th:href="@{/sample/all}">/sample/all</a><br>
+<a th:href="@{/sample/member}">/sample/member</a><br>
+<a th:href="@{/sample/admin}">/sample/admin</a><br>
 </body>
 </html>
