--- a/ex7/src/main/resources/templates/auth/authenticationFailure.html
+++ b/ex7/src/main/resources/templates/auth/authenticationFailure.html
@@ -2,7 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>Authentication Failure</title>
+  <title>Title</title>
 </head>
 <body>
 <h1>Authentication Failure</h1>
