--- a/ex7/src/main/resources/templates/error/serverError.html
+++ b/ex7/src/main/resources/templates/error/serverError.html
@@ -5,7 +5,7 @@
   <title>Title</title>
 </head>
 <body>
-<h1>Server Error</h1>
+<h1>Server Internal Error</h1>
 <p th:text="${errorMessage}"></p>
 </body>
 </html>
