--- a/InstaPrj/src/main/resources/templates/index.html
+++ b/InstaPrj/src/main/resources/templates/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 <div class="container">
+  <h1>Index.html</h1>
   <form class="form-signin" method="post" action="/InstaPrj/login">
     <h2 class="form-signin-heading">Please sign in</h2>
     <p>
@@ -24,7 +25,7 @@
     <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
   </form>
   <h2 class="form-signin-heading">Login with OAuth 2.0</h2><table class="table table-striped">
-  <tr><td><a href="/ex7/oauth2/authorization/google">Google</a></td></tr>
+  <tr><td><a href="/InstaPrj/oauth2/authorization/google">Google</a></td></tr>
 </table>
 </div>
 </body></html>
