--- a/InstaPrj/src/main/resources/templates/main/login.html
+++ b/InstaPrj/src/main/resources/templates/main/login.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div class="container">
-  <form class="form-signin" method="post" action="/instaPrj/login">
+  <form class="form-signin" method="post" action="/InstaPrj/login">
     <h2 class="form-signin-heading">Please sign in</h2>
     <p>
       <label for="username" class="sr-only">Username</label>
@@ -21,10 +21,12 @@
       <label for="password" class="sr-only">Password</label>
       <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
     </p>
+    <p><input type='checkbox' name='remember-me'/> Remember me on this computer.</p>
     <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
   </form>
+  <h1>여기야???</h1>
   <h2 class="form-signin-heading">Login with OAuth 2.0</h2><table class="table table-striped">
-  <tr><td><a href="/ex7/oauth2/authorization/google">Google</a></td></tr>
+  <tr><td><a href="/InstaPrj/oauth2/authorization/google">Google</a></td></tr>
 </table>
 </div>
 </body></html>
