--- a/InstaPrj/src/main/resources/templates/feeds/list.html
+++ b/InstaPrj/src/main/resources/templates/feeds/list.html
@@ -45,14 +45,14 @@
              style="cursor:pointer;">
           <div class="card h-100">
             <!-- Product image-->
-            <div>
-              <!-- 조건 확인 -->
-              <p th:text="'Size: ' + ${feedsDTO.photosDTOList.size()}"></p>
-              <p th:if="${!feedsDTO.photosDTOList.isEmpty()}"
-                 th:text="'Path: ' + ${feedsDTO.photosDTOList[0].path}"></p>
-              <p th:if="${!feedsDTO.photosDTOList.isEmpty()}"
-                 th:text="'Thumbnail URL: ' + ${feedsDTO.photosDTOList[0].getThumbnailURL()}"></p>
-            </div>
+<!--            <div>-->
+<!--              &lt;!&ndash; 조건 확인 &ndash;&gt;-->
+<!--              <p th:text="'Size: ' + ${feedsDTO.photosDTOList.size()}"></p>-->
+<!--              <p th:if="${!feedsDTO.photosDTOList.isEmpty()}"-->
+<!--                 th:text="'Path: ' + ${feedsDTO.photosDTOList[0].path}"></p>-->
+<!--              <p th:if="${!feedsDTO.photosDTOList.isEmpty()}"-->
+<!--                 th:text="'Thumbnail URL: ' + ${feedsDTO.photosDTOList[0].getThumbnailURL()}"></p>-->
+<!--            </div>-->
             <!-- 피드 이미지가 있을 때만 표시되는 이미지 -->
             <img th:if="${feedsDTO.photosDTOList.size() > 0 && feedsDTO.photosDTOList[0].path != null}"
                  th:src="|@{/display(fileName=${feedsDTO.photosDTOList[0].getThumbnailURL()})}|"
